[package]
name = "from-to-repr"
version = "0.1.1"
edition = "2021"
license = "CC0-1.0"
description = "Derives TryFrom and From implementations for the representation type of a Rust enumeration."
repository = "https://github.com/RavuAlHemio/from-to-repr"
readme = "README.md"
keywords = ["enum", "from"]

[dependencies]
proc-macro2 = { version = "1.0.36" }
quote = { version = "1.0.15" }
syn = { version = "1.0.86" }

[lib]
proc-macro = true
