[package]
name = "from-to-repr"
version = "0.1.5"
edition = "2021"
license = "CC0-1.0"
description = "Derives TryFrom and From implementations for the representation type of a Rust enumeration."
repository = "https://github.com/RavuAlHemio/from-to-repr"
readme = "README.md"
keywords = ["enum", "from"]

[features]
from_to_other = ["syn/full"]

[dependencies]
proc-macro2 = { version = "1.0.43" }
quote = { version = "1.0.21" }
syn = { version = "1.0.99" }

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
